# BASIC-P2P_ESDT_MARKETPLACE-Elrond_Network

./: Cargo.toml  README.md  erdpy.json  marketplace.json
meta/: Cargo.toml
output/: marketplace.abi.json  marketplace.imports.json  marketplace.wasm  marketplace.wat
src/: marketplace.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
