[package]
name = "marketplace-wasm"
version = "1.0.0"
edition = "2021"
publish = false
authors = [ "René Ďuriš",]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.marketplace]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.34.1"

[dependencies.elrond-wasm-output]
version = "0.34.1"
features = [ "wasm-output-mode",]
